Modificación de la vista _ConsultaSparql

--- a/Gnoss.DevTools.ViewMaker/GenericViews/CMSPagina/ConsultaSPARQL/_ConsultaSPARQL.cshtml
+++ b/Gnoss.DevTools.ViewMaker/GenericViews/CMSPagina/ConsultaSPARQL/_ConsultaSPARQL.cshtml
@@ -2,7 +2,7 @@
 @model CMSComponentQuerySPARQL
 
 
-
+<!--Modificación para mostrar los resultados de la consulta sparql de manaera más visual (empleado en la página CMS DLCs)-->
 <style>
     /* Card general */
     .dlc-card {
