vista _Completa modificada

--- a/Gnoss.DevTools.ViewMaker/GenericViews/CMSPagina/ListadoRecursos/Vistas/_Completa.cshtml
+++ b/Gnoss.DevTools.ViewMaker/GenericViews/CMSPagina/ListadoRecursos/Vistas/_Completa.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Es.Riam.Util;
 @model ResourceModel
+<!--Modificación de la vista, que se mostrará en la página CMS home, para mostrar los recursos de una manera mucho más visual-->
 <style>
     .imagen-juego {
         width: 100%;
