Cambio en los estilos de algunas vistas

--- a/Gnoss.DevTools.ViewMaker/GenericViews/CMSPagina/CajaBuscador/_CajaBuscador.cshtml
+++ b/Gnoss.DevTools.ViewMaker/GenericViews/CMSPagina/CajaBuscador/_CajaBuscador.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Es.Riam.Gnoss.Web.MVC.Models;
 @model CMSComponentSearchBox
-
+<!--Ligeros cambios en los estilos de colores-->
 @{
     HeaderModel cabecera = Html.GetCabecera();
 }
