--- a/Gnoss.DevTools.ViewMaker/GenericViews/CargadorFacetas/_Faceta.cshtml
+++ b/Gnoss.DevTools.ViewMaker/GenericViews/CargadorFacetas/_Faceta.cshtml
@@ -1,5 +1,6 @@
 ﻿@*[security|||cargadorfacetas/_faceta.cshtml|||ak0825ovtfi]*@
 @model FacetModel
+<!--Ligeros cambios en los estilos de colores-->
 @*
 Descripción
 -----------------------------------------------
