--- a/Gnoss.DevTools.ViewMaker/GenericViews/CargadorResultados/_ResultadoRecurso.cshtml
+++ b/Gnoss.DevTools.ViewMaker/GenericViews/CargadorResultados/_ResultadoRecurso.cshtml
@@ -1,6 +1,6 @@
 ﻿@*[security|||cargadorresultados/_resultadorecurso.cshtml|||ak0825ovtfi]*@
 @model ResourceModel
-
+<!--Ligeros cambios en los estilos de colores-->
 @*
 Descripción
 -----------------------------------------------
