--- a/Gnoss.DevTools.ViewMaker/GenericViews/Shared/_cabecera/_menu-lateral-usuario.cshtml
+++ b/Gnoss.DevTools.ViewMaker/GenericViews/Shared/_cabecera/_menu-lateral-usuario.cshtml
@@ -1,5 +1,6 @@
 ﻿@*[security|||shared/_cabecera/_menu-lateral-usuario.cshtml|||ak0825ovtfi]*@
 @using Es.Riam.Gnoss.Web.MVC.Models;
+<!--Ligeros cambios en los estilos de colores-->
 @if (Html.GetComunidad() != null)
 {
     @*
