--- a/Gnoss.DevTools.ViewMaker/GenericViews/CMSPagina/HTML/_HTML.cshtml
+++ b/Gnoss.DevTools.ViewMaker/GenericViews/CMSPagina/HTML/_HTML.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Es.Riam.Gnoss.Web.MVC.Models;
 @model CMSComponentHTML
-
+<!--Ligeros cambios en los estilos de colores-->
 @*
 Descripción
 -----------------------------------------------
