--- a/Gnoss.DevTools.ViewMaker/GenericViews/CargadorFacetas/_CajaBusquedaSimple.cshtml
+++ b/Gnoss.DevTools.ViewMaker/GenericViews/CargadorFacetas/_CajaBusquedaSimple.cshtml
@@ -1,6 +1,6 @@
 ﻿@*[security|||cargadorfacetas/_cajabusquedasimple.cshtml|||ak0825ovtfi]*@
 @model FacetModel
-
+<!--Ligeros cambios en los estilos de colores-->
 @*
 Descripción
 -----------------------------------------------
